src/edu/purdue/cs352/minijava/parser/ParserAST.java
/* Generated By:JavaCC: Do not edit this line. ParserAST.java */
        package edu.purdue.cs352.minijava.parser;

        import java.util.*;
        import edu.purdue.cs352.minijava.*;
        import edu.purdue.cs352.minijava.ast.*;

        public class ParserAST implements ParserASTConstants {

// Grammar --------------------------------------------------------------------
  final public Program Program() throws ParseException {
        Main main;
        ClassDecl cd;
        List<ClassDecl> cds = new ArrayList<ClassDecl>();
    main = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case KW_CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      cd = ClassDeclaration();
                                    cds.add(cd);
    }
    jj_consume_token(0);
          {if (true) return new Program(token, main, cds);}
    throw new Error("Missing return statement in function");
  }

  final public Main MainClass() throws ParseException {
        Statement body;
    jj_consume_token(KW_CLASS);
    Identifier();
    jj_consume_token(SYM_LBRACE);
    jj_consume_token(KW_PUBLIC);
    jj_consume_token(KW_STATIC);
    jj_consume_token(KW_VOID);
    jj_consume_token(KW_MAIN);
    jj_consume_token(SYM_LPAREN);
    jj_consume_token(KW_STRING);
    jj_consume_token(SYM_LSQPAREN);
    jj_consume_token(SYM_RSQPAREN);
    Identifier();
    jj_consume_token(SYM_RPAREN);
    jj_consume_token(SYM_LBRACE);
    body = Statement();
    jj_consume_token(SYM_RBRACE);
    jj_consume_token(SYM_RBRACE);
          {if (true) return new Main(token, body);}
    throw new Error("Missing return statement in function");
  }

  final public ClassDecl ClassDeclaration() throws ParseException {
        String name;
        String xtends = null;
        List<VarDecl> fields = new ArrayList<VarDecl>();
        List<MethodDecl> methods = new ArrayList<MethodDecl>();

        VarDecl field;
        MethodDecl method;
    jj_consume_token(KW_CLASS);
    name = Identifier();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case KW_EXTENDS:
      jj_consume_token(KW_EXTENDS);
      xtends = Identifier();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(SYM_LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case KW_INT:
      case KW_BOOLEAN:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      field = VarDeclaration();
                                             fields.add(field);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case KW_PUBLIC:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      method = MethodDeclaration();
                                                 methods.add(method);
    }
    jj_consume_token(SYM_RBRACE);
          {if (true) return new ClassDecl(token, name, xtends, fields, methods);}
    throw new Error("Missing return statement in function");
  }

  final public VarDecl VarDeclaration() throws ParseException {
        Type type;
        String name;
    type = Type();
    name = Identifier();
    jj_consume_token(SYM_SEMICOLON);
          {if (true) return new VarDecl(token, type, name);}
    throw new Error("Missing return statement in function");
  }

  final public MethodDecl MethodDeclaration() throws ParseException {
        Type retType;
        String name;
        List<Parameter> parameters = new ArrayList<Parameter>();
        List<VarDecl> vds = new ArrayList<VarDecl>();
        List<Statement> body = new ArrayList<Statement>();
        Exp retExp;

        Type paramType;
        String paramName;
        VarDecl vd;
        Statement statement;
    jj_consume_token(KW_PUBLIC);
    retType = Type();
    name = Identifier();
    jj_consume_token(SYM_LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case KW_INT:
    case KW_BOOLEAN:
    case IDENTIFIER:
      paramType = Type();
      paramName = Identifier();
                  parameters.add(new Parameter(token, paramType, paramName));
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SYM_COMMA:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        jj_consume_token(SYM_COMMA);
        paramType = Type();
        paramName = Identifier();
                          parameters.add(new Parameter(token, paramType, paramName));
      }
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(SYM_RPAREN);
    jj_consume_token(SYM_LBRACE);
    label_5:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_5;
      }
      vd = VarDeclaration();
                                                       vds.add(vd);
    }
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case KW_IF:
      case KW_WHILE:
      case KW_TRUE:
      case KW_FALSE:
      case KW_THIS:
      case KW_NEW:
      case KW_PRINT:
      case SYM_LBRACE:
      case SYM_LPAREN:
      case SYM_EXCL:
      case IDENTIFIER:
      case INT_LITERAL:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_6;
      }
      statement = Statement();
                                            body.add(statement);
    }
    jj_consume_token(KW_RETURN);
    retExp = Expression();
    jj_consume_token(SYM_SEMICOLON);
    jj_consume_token(SYM_RBRACE);
          {if (true) return new MethodDecl(token, retType, name, parameters, vds, body, retExp);}
    throw new Error("Missing return statement in function");
  }

  final public Type Type() throws ParseException {
        Type ret;
        String name;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case KW_INT:
      jj_consume_token(KW_INT);
                             ret = new TypeInt(token);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SYM_LSQPAREN:
        jj_consume_token(SYM_LSQPAREN);
        jj_consume_token(SYM_RSQPAREN);
                                                 ret = new TypeIntArray(token);
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      break;
    case KW_BOOLEAN:
      jj_consume_token(KW_BOOLEAN);
                                 ret = new TypeBoolean(token);
      break;
    case IDENTIFIER:
      name = Identifier();
                                            ret = new Type(token, name);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public Statement Statement() throws ParseException {
        Statement ret;

        List<Statement> body = new ArrayList<Statement>();
        Statement bodyStatement;

        Exp condition;
        Statement ifPart;
        Statement elsePart = null;

        Exp value;

        Exp exp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SYM_LBRACE:

      jj_consume_token(SYM_LBRACE);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case KW_IF:
        case KW_WHILE:
        case KW_TRUE:
        case KW_FALSE:
        case KW_THIS:
        case KW_NEW:
        case KW_PRINT:
        case SYM_LBRACE:
        case SYM_LPAREN:
        case SYM_EXCL:
        case IDENTIFIER:
        case INT_LITERAL:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_7;
        }
        bodyStatement = Statement();
                                                        body.add(bodyStatement);
      }
      jj_consume_token(SYM_RBRACE);
                          ret = new BlockStatement(token, body);
      break;
    case KW_IF:

      jj_consume_token(KW_IF);
      jj_consume_token(SYM_LPAREN);
      condition = Expression();
      jj_consume_token(SYM_RPAREN);
      ifPart = Statement();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case KW_ELSE:
        jj_consume_token(KW_ELSE);
        elsePart = Statement();
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
                          ret = new IfStatement(token, condition, ifPart, elsePart);
      break;
    case KW_WHILE:

      jj_consume_token(KW_WHILE);
      jj_consume_token(SYM_LPAREN);
      condition = Expression();
      jj_consume_token(SYM_RPAREN);
      bodyStatement = Statement();
                          ret = new WhileStatement(token, condition, bodyStatement);
      break;
    case KW_PRINT:

      jj_consume_token(KW_PRINT);
      jj_consume_token(SYM_LPAREN);
      value = Expression();
      jj_consume_token(SYM_RPAREN);
      jj_consume_token(SYM_SEMICOLON);
                          ret = new PrintStatement(token, value);
      break;
    case KW_TRUE:
    case KW_FALSE:
    case KW_THIS:
    case KW_NEW:
    case SYM_LPAREN:
    case SYM_EXCL:
    case IDENTIFIER:
    case INT_LITERAL:

      exp = Expression();
      jj_consume_token(SYM_SEMICOLON);
                          ret = new ExpStatement(token, exp);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public Exp Expression() throws ParseException {
        Exp ret;
    ret = AssignExpr();
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public Exp AssignExpr() throws ParseException {
        Exp ret;

        Exp value = null;
    ret = LogicOp();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SYM_EQUAL:
      jj_consume_token(SYM_EQUAL);
      value = AssignExpr();
                                                 ret = new AssignExp(token, ret, value);
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

// CmpOp || CmpOp && CmpOp && CmpOp ... left-binding
  final public Exp LogicOp() throws ParseException {
        Exp ret;
        BinaryExp postfix;
    ret = CmpOp();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SYM_AMPAMP:
      case SYM_BARBAR:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_8;
      }
      postfix = LogicOp_postfix();
                  postfix.setLeft(ret);  ret = postfix;
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public BinaryExp LogicOp_postfix() throws ParseException {
        Token op;
        Exp right;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SYM_AMPAMP:
      jj_consume_token(SYM_AMPAMP);
      break;
    case SYM_BARBAR:
      jj_consume_token(SYM_BARBAR);
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          op = token;
    right = CmpOp();
          {if (true) return new BinaryExp(null, op, right);}
    throw new Error("Missing return statement in function");
  }

// AddOp < AddOp == AddOp != AddOp >= AddOp ... left-binding
  final public Exp CmpOp() throws ParseException {
        Exp ret;
        BinaryExp postfix;
    ret = AddOp();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SYM_LESS:
      case SYM_LESSEQUAL:
      case SYM_EQUALEQUAL:
      case SYM_EXCLEQUAL:
      case SYM_MORE:
      case SYM_MOREEQUAL:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_9;
      }
      postfix = CmpOp_postfix();
                  postfix.setLeft(ret);  ret = postfix;
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public BinaryExp CmpOp_postfix() throws ParseException {
        Token op;
        Exp right;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SYM_LESS:
      jj_consume_token(SYM_LESS);
      break;
    case SYM_LESSEQUAL:
      jj_consume_token(SYM_LESSEQUAL);
      break;
    case SYM_EQUALEQUAL:
      jj_consume_token(SYM_EQUALEQUAL);
      break;
    case SYM_EXCLEQUAL:
      jj_consume_token(SYM_EXCLEQUAL);
      break;
    case SYM_MORE:
      jj_consume_token(SYM_MORE);
      break;
    case SYM_MOREEQUAL:
      jj_consume_token(SYM_MOREEQUAL);
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          op =  token;
    right = AddOp();
          {if (true) return new BinaryExp(null, op, right);}
    throw new Error("Missing return statement in function");
  }

// MulOp + MulOp - MulOp ... left-binding 
  final public Exp AddOp() throws ParseException {
        Exp ret;
        BinaryExp postfix;
    ret = MulOp();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SYM_PLUS:
      case SYM_MINUS:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_10;
      }
      postfix = AddOp_postfix();
                  postfix.setLeft(ret);  ret = postfix;
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public BinaryExp AddOp_postfix() throws ParseException {
        Token op;
        Exp right;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SYM_PLUS:
      jj_consume_token(SYM_PLUS);
      break;
    case SYM_MINUS:
      jj_consume_token(SYM_MINUS);
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          op = token;
    right = MulOp();
          {if (true) return new BinaryExp(null, op, right);}
    throw new Error("Missing return statement in function");
  }

// UnaryOp * UnaryOp / UnaryOp % UnaryOp ... left-binding
  final public Exp MulOp() throws ParseException {
        Exp ret;
        BinaryExp postfix;
    ret = UnaryOp();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SYM_STAR:
      case SYM_SLASH:
      case SYM_PERCENT:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_11;
      }
      postfix = MulOp_postfix();
                  postfix.setLeft(ret);  ret = postfix;
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public BinaryExp MulOp_postfix() throws ParseException {
        Token op;
        Exp right;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SYM_STAR:
      jj_consume_token(SYM_STAR);
      break;
    case SYM_SLASH:
      jj_consume_token(SYM_SLASH);
      break;
    case SYM_PERCENT:
      jj_consume_token(SYM_PERCENT);
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          op = token;
    right = UnaryOp();
          {if (true) return new BinaryExp(null, op, right);}
    throw new Error("Missing return statement in function");
  }

// !!!!...PostfixOp
  final public Exp UnaryOp() throws ParseException {
        Exp ret;
        Exp sub;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SYM_EXCL:

      jj_consume_token(SYM_EXCL);
      sub = UnaryOp();
                          ret = new NotExp(token, sub);
      break;
    case KW_TRUE:
    case KW_FALSE:
    case KW_THIS:
    case KW_NEW:
    case SYM_LPAREN:
    case IDENTIFIER:
    case INT_LITERAL:

      ret = PostfixOp();
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

// PrimaryExp[Exp][Exp][Exp]...
// PrimaryExp.method1().method2(Exp, Exp, Exp).method3(Exp) ...
// PrimaryExp.field1.field2.field3 ...
  final public Exp PostfixOp() throws ParseException {
        Exp ret;

        IndexExp indexPostfix;
        MemberExp memberPostfix;
        CallExp callPostfix;
    ret = PrimaryExp();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SYM_LSQPAREN:
      case SYM_DOT:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_12;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SYM_LSQPAREN:

        indexPostfix = PostfixOp_indexPostfix();
                          indexPostfix.setTarget(ret);  ret = indexPostfix;
        break;
      case SYM_DOT:
        if (jj_2_2(3)) {

          callPostfix = PostfixOp_callPostfix();
                                  callPostfix.setTarget(ret);  ret = callPostfix;
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SYM_DOT:
